# UserManagement

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER.md  DOCKER_SCRIPTS_README.md  DockerDevRun.md  ENHANCED_MFA_IMPLEMENTATION.md  ExternalAppReadme.md  FRONTEND_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  OAUTH_CLEANUP_SUMMARY.md  OAUTH_PKCE_IMPLEMENTATION.md  README.md  REDIRECT_URI_DEBUG.md  VERSION_COMPARISON_UPDATED.md  build-docker-images.sh  complete_database_setup.sql  docker-compose.yml  export_current_data.py  exported_data.sql  local_postgresql_setup.sql  migration_guide.md  run-docker-images.sh  test_functional_roles_hierarchy.md  test_hierarchy_implementation.sh
.claude/: settings.local.json
Api/: .dockerignore  CLAUDE.md  Dockerfile  FORGOT_PASSWORD_SETUP.md  README.md  REFACTORING_SUMMARY.md  TROUBLESHOOTING.md  business_unit.py  create_test_token.py  database.py  database_export_aaa_test_schema.sql  demo_dynamic_roles.py  drop_triggers.sql  dumm.py  exceptions.py  export_supabase_data.py  exported_data.sql  firm.py  generate_admin_sql.py  generate_export_queries.py  main.py  models.py  organization.py  postgres_db_exporter.py  pyproject.toml  query_current_data.py  requirements.txt  role.py  simple_hash.py  start_auth_server  temp.test  test_full_password_reset_flow.py  test_functional_roles.py  test_mfa_removal.py  test_mfa_status.py  test_organization_validation.py  test_reset_password.py  test_role_validation.py  user_mgmt_with_data_final.sql
Api/.claude/: settings.local.json
Api/constants/: __init__.py  roles.py
Api/database/: __init__.py  base_repository.py  models.py  postgres_repository.py  supabase_repository.py
Api/migrations/: add_mfa_method_column.sql  create_aaa_business_units_table.sql  create_aaa_firms_table.sql  create_aaa_organizations_table.sql  create_aaa_user_business_units_table.sql  create_email_otp_table.sql  create_functional_roles_tables.sql  create_hierarchical_functional_roles_views_only.sql  create_hierarchical_tables.sql  create_user_details_view.sql  extend_aaa_clients_for_oauth.sql
Api/routers/: admin.py  auth.py  business_units.py  firms.py  functional_roles.py  functional_roles_hierarchy.py  oauth.py  organizations.py  profiles.py
Api/scripts/: README.md  check_mfa_status.py  complete_database_setup.sql  db-tools.sh  db_export.sh  disable_mfa_temp.py  export_database_data.py  fix_mfa_issue.py  generate_database_setup.py  inspect_database.py  install.sh  run_mfa_migrations.sql  start.sh  stop_server.sh  test_mfa.sh  test_mfa_with_names.sh  test_pkce_flow.py  test_profile_endpoint.sh
Api/sql_queries/: EXPORT_GUIDE.md  export_queries.sql  inspection_queries.sql
Api/sqls/: Tables.sql  add_name_fields_migration.sql  create_admin.py  password_reset_tokens.sql
Api/tests/: test_admin_api.py
Api/unittest/: test_repository_refactor.py
Api/validators/: __init__.py  business_unit_validator.py  organization_validator.py
ExternalApp/: EXTERNAL_APP_INTEGRATION_GUIDE.md  INSTALLATION_GUIDE.md  INTEGRATION_SUMMARY.md  README.md  THEME_INTEGRATION_DEMO.html  THEME_INTEGRATION_EXAMPLE.md  UPGRADE_SUMMARY.md  USAGE_GUIDE.md  start-all.sh  test_oauth_setup.py
ExternalApp/Api/: .gitignore  main.py  requirements.txt  start.sh
ExternalApp/WebUI/: fix-angular.sh  setup.sh  start.sh
ExternalApp/WebUI/external-app/: angular.json  package-lock.json  (+2 more)
WebUI/: CLAUDE.md  CLEAN_PURPLE_THEME.css  EXTERNAL_THEME_EXAMPLE.css  EXTERNAL_THEME_INTEGRATION.md  EXTERNAL_THEME_QUICKSTART.md  PRODUCTION_BLUE_THEME.css  PRODUCTION_GREEN_THEME.css  PRODUCTION_PURPLE_THEME.css  SIMPLE_TEST.css  SUPER_SPECIFIC_TEST.css  TEST_THEME.css  THEME_INTEGRATION_GUIDE.md  THEME_MIGRATION_SUMMARY.md  THEME_TEST.html  app_instructions.txt  cors_server.py
WebUI/.claude/: settings.local.json
WebUI/user-management-app/: .dockerignore  Dockerfile  FORGOT_PASSWORD_INTEGRATION.md  README.md  RESET_PASSWORD_REQUIREMENTS_DEMO.md  angular.json  package-lock.json  package.json  tailwind.config.js
(+110 files in other folders)
